// Copyright (c) 2024-present, arana-db Community.  All rights reserved.
//
// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kiwi.raft.binlog;

// Binlog entry operation type
enum OperationType {
    UNKNOWN = 0;
    PUT = 1;      // SET operation
    DELETE = 2;   // DEL operation
    EXPIRE = 3;   // EXPIRE operation
    CLEAR = 4;    // FLUSHDB/FLUSHALL operation
}

// Binlog entry - 只保留操作类型和数据内容
message BinlogEntry {
    // Operation type
    OperationType operation = 1;
    
    // Command data (serialized Redis command)
    bytes data = 2;
    
    // Optional: timestamp for ordering (nanoseconds since epoch)
    optional int64 timestamp_ns = 3;
    
    // Optional: sequence number for mapping to RocksDB sequence
    optional uint64 sequence = 4;
}
